# SAUT_project

./: .gitmodules  LICENSE  README.md  error_elipse.m  lawn_mower_big.txt  plots.m  simple_depth0.txt  simple_only_predict.txt  usbl_guide
bringup_saut/: CMakeLists.txt  package.xml  setup.py
bringup_saut/config/dev_configs/: ros_beacon.yaml
bringup_saut/config/simulation/mvector/: acoustic_data.yaml  addons.yaml  control.yaml  nav.yaml  process_gazebo.yaml
bringup_saut/config/simulation/ship/: addons.yaml  comms.yaml  nav.yaml  process_gazebo.yaml
bringup_saut/launch/: start_gz_medusa.launch  start_scenario.launch  start_ship.launch
bringup_saut/launch/dev_launch/: gazebo_simulation.launch
data_files/: big_ruido.txt  comms_ruido.txt  medusa_stop.txt
data_files/far_beacon/: lawn_mower_far0.txt  lawn_mower_far1.txt  lawn_mower_far10.txt  lawn_mower_far2.txt  lawn_mower_far3.txt  lawn_mower_far4.txt  lawn_mower_far5.txt  lawn_mower_far6.txt  lawn_mower_far7.txt  lawn_mower_far8.txt  lawn_mower_far9.txt
data_files/far_com_ruido/: novo_ruido_far0.txt  novo_ruido_far1.txt  novo_ruido_far2.txt  novo_ruido_far3.txt  novo_ruido_far4.txt  novo_ruido_far5.txt
data_files/lawn_mower/: lawn_mower1.txt  lawn_mower10.txt  lawn_mower2.txt  lawn_mower3.txt  lawn_mower4.txt  lawn_mower5.txt  lawn_mower6.txt  lawn_mower7.txt  lawn_mower8.txt  lawn_mower9.txt
data_files/near_com_ruido/: novo_ruido0.txt  novo_ruido1.txt  novo_ruido10.txt  novo_ruido2.txt  novo_ruido3.txt  novo_ruido4.txt  novo_ruido5.txt  novo_ruido6.txt  novo_ruido7.txt  novo_ruido8.txt  novo_ruido9.txt
data_files/no_comms/: circle_ruido.txt  lawn_mower_ruido.txt
ekf_saut/: CMakeLists.txt  ekf.py  medusa_stop.txt  package.xml  sensor_read.py  sensor_read_yaw.py  setup.py
ekf_saut/msg/: MsgEKF.msg
matlab_plots/: error_elipse.m  plots.m
oceantech_bringup/: CMakeLists.txt  package.xml
oceantech_bringup/config/dev_configs/: ros.yaml  (+1 more)
oceantech_bringup/launch/: start_ship.launch
oceantech_vehicles/oceantech_vehicles/: CMakeLists.txt  package.xml
oceantech_vehicles/ship_vehicle/: package.xml
path_bringup/: CMakeLists.txt  package.xml
path_bringup/launch/: start_mission.launch
path_bringup/src/: mission_launcher.py  switch_controllers.py  switch_paths.py
vehicles/mvector/: CMakeLists.txt  package.xml
vehicles/ship_vehicle/: CMakeLists.txt
vehicles/ship_vehicle/launch/: upload.launch
vehicles/ship_vehicle/meshes/: ship.dae
vehicles/ship_vehicle/robots/: default.xacro
vehicles/ship_vehicle/urdf/: sensors.xacro
(+14 files in other folders)
