<?xml version="1.0"?>
<package format="2">
  <name>bringup_saut</name>
  <version>1.0.0</version>
  <description>TODO</description>

  <maintainer email="daniel.garcia.domingos.rosa@tecnico.ulisboa.pt">Daniel Rosa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
